# flask-realworld-example-app

./: .editorconfig  .gitignore  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS_SUMMARY.md  LICENSE  Makefile  README.md  README.rst  SECURITY.md  autoapp.py  docker-compose.yml  hatch.toml  pyproject.toml  setup.cfg
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependabot.yml.disabled
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: check_format.yml  codeql.yml  coverage.yml  format_check.yml  pr-name.yml  release.yml  unit_tests.yml
conduit/: app.py  commands.py  compat.py  database.py  exceptions.py  extensions.py  settings.py  utils.py
conduit/articles/: models.py  serializers.py  views.py
conduit/profile/: models.py  serializers.py  views.py
conduit/security/: __init__.py  views.py  vulnerabilities.py
conduit/user/: models.py  serializers.py  views.py
docs/: README.md  api.md  architecture.md  datadog-integration.md  deployment.md  security-testing.md  testing.md
requirements/: dev.txt  prod.txt  prod_py39_to_py312.txt
tests/: conftest.py  factories.py  test_articles.py  test_authentication.py  test_config.py  test_models.py  test_profile.py  test_security.py
