[tool.setuptools]
package-dir = {"" = "conduit"}

[project]
name = "flask-realworld-example-app"
dynamic = ["version"]
description = "Datadog Flask Real World example"
readme = "README.md"
license = { text = "LICENSE.BSD3" }
requires-python = ">=3.9"
authors = [
    { name = "Datadog, Inc.", email = "dev@datadoghq.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.urls]
"Bug Tracker" = "https://github.com/DataDog/flask-realworld-example-app/issues"
Changelog = "https://github.com/DataDog/flask-realworld-example-app/releases"
Documentation = "https://ddtrace.readthedocs.io/en/stable/"
Homepage = "https://github.com/DataDog/flask-realworld-example-app"
"Source Code" = "https://github.com/DataDog/flask-realworld-example-app/"

[tool.pyright]
exclude = [
  "**/__pycache__",
  ".git",
  ".ddriot",
  ".ddtox",
  ".riot",
  ".tox",
  ".venv",
]


[tool.bandit]
targets = ["ddtrace/"]

[tool.ruff.format]
# Formatter-specific settings
# The exclude list from [tool.ruff] is inherited automatically
# Additional formatter options can be added here if needed
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
force-sort-within-sections = true
known-first-party = [ "ddtrace" ]
relative-imports-order = "furthest-to-closest"

